# fast-api-react-crud

./: Taskfile.yml  compose.services.yml
Database/: compose.service.yml  docker-compose.yaml
crud-BE/: .env  docker-compose.yaml
crud-BE/app/: config.py  crud.py  main.py  models.py  routes.py  schemas.py
crud-api/: .Dockerfile  .gitignore  compose.service.yml  docker-compose.yml  fastapi.Dockerfile  pyproject.toml  requirements.txt
crud-api/app/: main.py
crud-app/: package.json
crud-app/src/: App.tsx
crud-app/src/components/: CustomTabPanel.tsx
crud-app/src/components/DataTable/: DataTable.tsx
crud-app/src/store/: index.ts
crud-web/: .Dockerfile  .prettierrc  compose.service.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json
crud-web/src/: main.tsx
crud-web/src/components/DataTable/: CustomFooterStatusComponent.tsx  handleEditAndDelete.tsx
crud-web/src/store/: personalCRUDSlice.ts
