[tool.poetry]
name = "crud-be"
version = "0.1.0"
description = ""
authors = ["Yash Gohil <yashganesh.gohil@smartims.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
loguru = "^0.7.2"
sqlmodel = "^0.0.21"
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
